@@ -179,6 +179,11 @@ namespace ContractConfigurator.Parameters
                 }
             }
 
+            // Fire the parameter change event to account for all the changed child parameters.
+            // We don't fire it for the child parameters, as any with a failed state will cause
+            // the contract to fail, which we don't want.
+            GameEvents.Contract.onParameterChange.Fire(this.Root, this);
+
             // Manually run the OnParameterStateChange
             OnParameterStateChange(this);
         }
