@@ -2,6 +2,7 @@ ContractConfigurator (UNRELEASED)
 - Added VesselParameterGroup parameter (supports grouping Vessel parameters, tracking duration, tracking non-active vessels, works across docking/undocking/decoupling).
 - Created new versions of all the stock parameters dealing with Vessels to add support for tracking non-active vessels.
 - Added HasCrew parameter.
+- Added HasResource parameter
 - Added HasPart parameter.
 - Added HasPartModule parameter.
 - Added PartModuleUnlocked requirement.
